# 00-assistant

./: .gitignore  22b_assistant_project_tree_v5_final.md  CLAUDE_CODE_22B_ASSISTANT_BMVP.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-23-22b-assistant-bmvp-backend.md  2026-03-23-task-agent.md
docs/superpowers/specs/: 2026-03-23-22b-assistant-bmvp-backend-design.md  2026-03-23-task-agent-design.md
src/assistant_22b/: __main__.py  config.py
src/assistant_22b/agents/: base.py  registry.py
src/assistant_22b/agents/administrative/: agent.py  manifest.json  role_prompt.txt
src/assistant_22b/agents/task/: __init__.py  agent.py  manifest.json
src/assistant_22b/hwp/: adapter.py
src/assistant_22b/llm/: router.py
src/assistant_22b/pipeline/: context.py  executor.py
src/assistant_22b/security/: auditor.py  gate1_classifier.py  gate2_masker.py  gate3_verifier.py  gate4_logger.py
src/assistant_22b/storage/: conversations.py  tasks.py
src/assistant_22b/ui/: app.py  chat_window.py  tray.py
tests/: conftest.py  test_administrative_agent.py  test_agent_registry.py  test_base_agent.py  test_config.py  test_conversations.py  test_gate1_classifier.py  test_gate2_masker.py  test_gate3_verifier.py  test_gate4_logger.py  test_hwp_adapter.py  test_llm_router.py  test_pipeline_context.py  test_pipeline_executor.py  test_security_auditor.py  test_task_agent.py  test_task_store.py  test_ui_app.py
