[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-22b"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gongmun_doctor",
    "cryptography>=42.0",
    "pystray>=0.19",
    "pillow>=10.0",
    "keyboard>=0.13",
]

[project.scripts]
assistant-22b = "assistant_22b.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
